update for new openaq api spec